--- a/galderak.css
+++ b/galderak.css
@@ -156,13 +156,13 @@ a{
 .chrome {
     position: relative;
     display: inline;
-    left:10%;
+    left:25%;
     right:auto;
     background-image: -webkit-linear-gradient(#374bbc 0%, #b6e5f1 46%, #ffffff 50%, #43ebe3 54%, #88cfff 58%, #1c1158 90%, #704eec 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 4px #f5f5f5;
-    font-size: 150px;
+    font-size: 200px;
     font-family: 'Titillium Web', sans-serif;
     font-style: italic;
     margin: 0;
@@ -191,10 +191,11 @@ a{
   .dreams {
     position: absolute;
     display: inline;
-    left:5%;
+    left:25%;
+    top:10%;
     margin: 0px;
     font-family: 'Mr Dafoe', cursive;
-    font-size: 110px;
+    font-size: 160px;
     color: #75aaf9 ;
     transform:rotate(-15deg);
     -ms-transform:rotate(-15deg); /* IE 9 */
