--- a/fisika.css
+++ b/fisika.css
@@ -8,6 +8,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Condensed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Hind+Vadodara&display=swap');
 
+@font-face {src: url("Sunrise\ International\ Demo.otf"); 
+    font-family: "Sunrise International Demo"; }
 
 .aukerak {
 background:#212121;
